# kahvi

./: .coverage  .coveragerc  .gitignore  .pylintrc  LICENSE.txt  README.md  log.html  output.xml  pyproject.toml  report.html  retro.md  run_robot_tests.sh  schema.sql
.github/workflows/: main.yml
src/: AppLibrary.py  app.py  config.py  db_helper.py  index.py  util.py
src/repositories/: reference_repository.py
src/static/: main.css
src/templates/: add_reference.html  bib_ref.html  edit_ref.html  index.html  layout.html  references.html
src/tests/: article.robot  bibtex.robot  book.robot  conftest.py  delete_ref.robot  in_proceedings.robot  modifying.robot  navigation.robot  resource.robot  search.robot  tags.robot  test_string_formats.py  validate_app_test.py
src/unittests/: test_string_formats.py
templates/: index.html
tests/: article.robot  resource.robot  validate_app_test.py
